Added sample for 1. Load bean class base on property name 2. Scan package base on config property

--- a/src/main/resources/db.config
+++ b/src/main/resources/db.config
@@ -5,4 +5,9 @@ db.driver.classname=oracle.jdbc.driver.OracleDriver
 db.url=jdbc:oracle:thin:@hostname:1521:sid
 db.username=user_name
 db.password=password
-db.validation.query=select 1 from dual
+db.validation.query=select 1 from dualssl.file.path=/app/config/ssl.config
+
+app.serviceClass=com.neasaa.app.service.SampleServiceImpl
+
+# set this null if no security.
+scan.security.package=com.neasaa.security
